search content file and meta excerpts

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: contact
 title: StoneAge Waterblast Tools - High pressure equipment for Hydroblasting | Industrial cleaning | Sewer jetting | Downhole cleaning
+excerpt: Manufacturer of high quality waterblast tools and automated equipment for high pressure hydroblasting/industrial cleaning, sewer jetting nozzles, and downhole tools for well intervention.
 permalink: /
 ---
 
