--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Backout Prevention Equipment for Pipe Cleaning
+excerpt: Safety equipment for high pressure pipe and tube cleaning applications specifically designed to prevent the tool from exiting the pipe during operation.
 permalink: /backout-prevention
 master-slider: yes
 ---
