--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge 2-inch Badger Pipe Cleaning Tools
+excerpt: The 2-inch Badger is a self-rotary tool designed for cleaning 2–4 in. (51–102 mm) pipes with bends and long radius elbows, such as U-Tubes and process lines.
 permalink: /2inch-badger
 master-slider: yes
 ---
