--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge 6-inch Badger Pipe Cleaning Tools
+excerpt: The 6” Badger adjustable rotation pipe cleaning tool navigates elbows as small as 6 in. (152 mm).
 permalink: /6inch-badger
 master-slider: yes
 ---
