--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 page-type: product
-title: StoneAge Banshee and Beetle Tube Cleaning Nozzles
+title: StoneAge Banshee Rotary Tube Cleaning Nozzles
+excerpt: Banshee rotary tube cleaning nozzles are the industry standard for unplugging, cleaning, and polishing tubes, such as those found in heat exchangers, evaporators, and industrial tube bundles.
 permalink: /banshee
 master-slider: yes
 ---
