--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Barracuda High Pressure Shotgunning Tools
+excerpt: Barracuda self-rotary tools are the industry standard for speed controlled rotary shotgunning. 
 permalink: /barracuda
 master-slider: yes
 ---
