--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Beetle Curved Pipe/Tube Cleaning Nozzles
+excerpt: Beetle rotary nozzles are ideal for navigating tubes and small diameter lines with curves and elbows.
 permalink: /beetle
 master-slider: yes
 ---
