--- a/rotary-waterblast-tools/bjv-centralizers.html
+++ b/rotary-waterblast-tools/bjv-centralizers.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge BJV Centralizers for High Pressure Pipe Cleaning
+excerpt: Centralizers balance jet standoff distance for more consistent cleaning and helps to protect the tool as it passes through the pipe.
 permalink: /bjv-centralizers
 master-slider: yes
 ---
