--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge BJV Pipe Cleaning Tools
+excerpt: The BJV is our most versatile line of pipe cleaning tools, designed for the widest range of pipe sizes and configurations.
 permalink: /bjv
 master-slider: yes
 ---
@@ -105,11 +106,11 @@ master-slider: yes
             <div class="col-sm-5">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#p16" aria-controls="p16" role="tab" data-toggle="tab">BJ-P16</a></li>
-                <li role="presentation"><a href="#p12" aria-controls="p12" role="tab" data-toggle="tab">BJ-P12</a></li>
-                <li role="presentation"><a href="#m24" aria-controls="m24" role="tab" data-toggle="tab">BJ-M24</a></li>
-                <li role="presentation"><a href="#mp12" aria-controls="mp12" role="tab" data-toggle="tab">BJ-MP12</a></li>
-                <li role="presentation"><a href="#h9" aria-controls="h9" role="tab" data-toggle="tab">BJ-H9</a></li>
+                <li role="presentation" class="active"><a href="#p16" aria-controls="p16" role="tab" data-toggle="tab">BJV-P16</a></li>
+                <li role="presentation"><a href="#p12" aria-controls="p12" role="tab" data-toggle="tab">BJV-P12</a></li>
+                <li role="presentation"><a href="#m24" aria-controls="m24" role="tab" data-toggle="tab">BJV-M24</a></li>
+                <li role="presentation"><a href="#mp12" aria-controls="mp12" role="tab" data-toggle="tab">BJV-MP12</a></li>
+                <li role="presentation"><a href="#h9" aria-controls="h9" role="tab" data-toggle="tab">BJV-H9</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
