--- a/rotary-waterblast-tools/bpt-100-safety-stop.html
+++ b/rotary-waterblast-tools/bpt-100-safety-stop.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Backout Prevention Equipment for Banshee Tube Cleaning
+excerpt: The BPT-100 Banshee ProTex Safety Stop is a lightweight, durable splashguard built to keep operators safe from the potential hazards of manual flex-lancing.
 permalink: /bpt-100
 master-slider: yes
 ---
