--- a/rotary-waterblast-tools/gopher-tube-cleaning.html
+++ b/rotary-waterblast-tools/gopher-tube-cleaning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Gopher Pipe Cleaning Tools
+excerpt: The Gopher self-rotary tool is ideal for cleaning evaporator tubes and process lines at up to 40k psi (2800 bar).
 permalink: /gopher
 master-slider: yes
 ---
