--- a/rotary-waterblast-tools/hose-storage-reel.html
+++ b/rotary-waterblast-tools/hose-storage-reel.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge High Pressure Hose Storage Reel
+excerpt: The HWB safely stores and protects high pressure hose while improving job site safety.
 permalink: /hose-reel
 master-slider: yes
 ---
