--- a/rotary-waterblast-tools/nozzles.html
+++ b/rotary-waterblast-tools/nozzles.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge High Pressure Nozzles for Water Jetting
+excerpt: Durable jetting nozzles for high pressure applications.
 permalink: /nozzles
 master-slider: yes
 ---
