--- a/rotary-waterblast-tools/raptor-pipe-cleaning.html
+++ b/rotary-waterblast-tools/raptor-pipe-cleaning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Raptor Pipe Cleaning Tools
+excerpt: The Raptor self-rotating tool is used to clean process drains, totes, closed head drums, water well screens, ducts, exhaust stacks, and straight tubes as small as 2.25 in. (57 mm) in diameter.
 permalink: /raptor
 master-slider: yes
 ---
