--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -778,7 +778,7 @@ landing: yes
           </a>
         </div>
         
-        <div class="mix tank-cleaning" data-name="scs">
+        <div class="mix tank-cleaning swivels" data-name="scs">
           <a href="/scs" class="search-text">
             <img src="/assets/img/product/scs-01.jpg" class="img-responsive" />
             <h3>SCS</h3>
