--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge 4-inch Badger Pipe Cleaning Tools
+excerpt: The 4” Badger self-rotary pipe cleaning tool navigates elbows as small as 4 in. (102 mm) at up to 43.5k psi (3000 bar).
 permalink: /4inch-badger
 master-slider: yes
 ---
