--- a/rotary-waterblast-tools/pipe-extensions.html
+++ b/rotary-waterblast-tools/pipe-extensions.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Durable High Pressure Nozzle Extensions for Reduced Standoff Distance
+excerpt: Pipe extensions maximize jet power and material removal rates by placing nozzles close to the target surface being cleaned.
 permalink: /pipe-extensions
 master-slider: yes
 ---
