building search file + meta"
q
:

--- a/rotary-waterblast-tools/sg-swivel.html
+++ b/rotary-waterblast-tools/sg-swivel.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge SG Swivel - Rotary Couplings for High Pressure Industrial Cleaning
+excerpt: SG Swivels are reliable, easy to maintain and are widely used in our surface preparation tools. 
 permalink: /sg-swivel
 master-slider: yes
 ---
