--- a/rotary-waterblast-tools/sh-swivel.html
+++ b/rotary-waterblast-tools/sh-swivel.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge SH Swivel - Rotary Couplings for High Pressure Industrial Cleaning
+excerpt: The SH swivel was designed to be a versatile, compact union for use in conveying high pressure fluid from a stationary line to a rotating or twisting assembly.
 permalink: /sh-swivel
 master-slider: yes
 ---
