--- a/rotary-waterblast-tools/sm-swivel.html
+++ b/rotary-waterblast-tools/sm-swivel.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge SM Swivel - Rotary Couplings for High Pressure Industrial Cleaning
+excerpt: The SM Swivel convey high pressure fluid from a stationary line to a rotating or twisting assembly.
 permalink: /sm-swivel
 master-slider: yes
 ---
