--- a/rotary-waterblast-tools/uh-swivel.html
+++ b/rotary-waterblast-tools/uh-swivel.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge UH Swivel - Rotary Couplings for High Pressure Industrial Cleaning
+excerpt: Considered the benchmark of high pressure rotary couplings, the UH swivel was designed to convey high pressure water from a stationary line to a powered rotating or twisting assembly.
 permalink: /uh-swivel
 master-slider: yes
 ---
