--- a/rotary-waterblast-tools/ve-400-safety-stop.html
+++ b/rotary-waterblast-tools/ve-400-safety-stop.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Backout Prevention Equipment for Tube Cleaning
+excerpt: The VE-400 is designed to protect the operator from a flex lance exiting the tube sheet during cleaning operations.
 permalink: /ve-400
 master-slider: yes
 ---
