--- a/sewer-tools-nozzles/hydro-x.html
+++ b/sewer-tools-nozzles/hydro-x.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Hydro-X Nozzles for Hydroexcavation
+excerpt: Options for safely providing access to buried utilities by potholing or trenching with high pressure water.
 permalink: /hydro-x
 master-slider: yes
 ---
