--- a/sewer-tools-nozzles/manhole-cleaner.html
+++ b/sewer-tools-nozzles/manhole-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog Manhole Cleaner by StoneAge
+excerpt: Turn your Warthog pipe cleaning tool into an effective Manhole Cleaner.
 permalink: /manhole-cleaner
 master-slider: yes
 ---
