--- a/sewer-tools-nozzles/warthog-centralizers.html
+++ b/sewer-tools-nozzles/warthog-centralizers.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Centralizers for Warthog Sewer Nozzles by StoneAge
+excerpt: Maximize the cleaning effectiveness of Warthog sewer nozzles for specific job requirements.
 permalink: /warthog-centralizers
 master-slider: yes
 ---
