--- a/sewer-tools-nozzles/warthog-wd.html
+++ b/sewer-tools-nozzles/warthog-wd.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WD Sewer Nozzles by StoneAge
+excerpt: The Warthog WD 1-1/4 is designed to handle municipal, industrial and commercial drain cleaning applications at high flows.
 permalink: /wd
 master-slider: yes
 ---
