--- a/sewer-tools-nozzles/warthog-wg.html
+++ b/sewer-tools-nozzles/warthog-wg.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WG Sewer Nozzles by StoneAge
+excerpt: The Warthog WG-1 is the proven choice for municipal, industrial and commercial drain cleaning applications.
 permalink: /wg
 master-slider: yes
 ---
