--- a/sewer-tools-nozzles/warthog-wgp.html
+++ b/sewer-tools-nozzles/warthog-wgp.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WGP-1 Puller Sewer Nozzles by StoneAge
+excerpt: The Warthog WGP-1 is designed to produce up to 40% more pulling power to navigate longer lines and moderate inclines.
 permalink: /wgp
 master-slider: yes
 ---
