--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WGR Magnum Sewer Nozzles by StoneAge
+excerpt: The WGR Magnum is specifically designed for extended tool durability and optimal handling of dirty or recycled water.
 permalink: /wgr-magnum
 master-slider: yes
 ---
