--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WGR Switcher Sewer Jetting Nozzle
+excerpt: The new WGR Switcher is two tools in one - switch between pulling or cleaning without removing the nozzle from the pipe.
 permalink: /wgr-switcher
 master-slider: yes
 ---
