--- a/sewer-tools-nozzles/warthog-wh.html
+++ b/sewer-tools-nozzles/warthog-wh.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WH Sewer Nozzles by StoneAge
+excerpt: The Warthog WH-1/2 and the WH-3/4 are are most commonly used with small capacity combination trucks and large trailer jetters.
 permalink: /wh
 master-slider: yes
 ---
@@ -82,7 +83,7 @@ master-slider: yes
             <ul>
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
               <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-              <li><a href="#section-bar-4"><span>Videos</span></a></li>
+              <li><a href="#section-bar-3"><span>Videos</span></a></li>
               <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
             </ul>
         </nav>
@@ -171,7 +172,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/WH_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;WH-1/2 &amp; WH-3/4</a></li>
+                <li><a href="/assets/pdf/manuals/WH_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;WH-1/2 &amp; WH-3/4 Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
@@ -224,7 +225,7 @@ master-slider: yes
           </section>
 
           <!-- Kits -->
-          <section id="section-bar-3">
+          <section id="section-bar-4">
             <div class="col-sm-8">
               <h3>The following kits are available:</h3>
               <p><em class="grey">Click to view kit contents</em></p>
