--- a/sewer-tools-nozzles/warthog-whr-magnum.html
+++ b/sewer-tools-nozzles/warthog-whr-magnum.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WHR Magnum Sewer Nozzles by StoneAge
+excerpt: The Warthog WHR Magnum is designed for mid-size pipes and lines, with the proven power and durability of the Magnum line of sewer tools.
 permalink: /whr-magnum
 master-slider: yes
 ---
