--- a/sewer-tools-nozzles/warthog-ws.html
+++ b/sewer-tools-nozzles/warthog-ws.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WS Sewer Nozzles by StoneAge
+excerpt: The Warthog WS-1/2 is designed to handle 4”-8” lines and is most commonly used with trailer jetters.
 permalink: /ws
 master-slider: yes
 ---
@@ -54,7 +55,7 @@ master-slider: yes
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=Warthog WS-1/2&body=Check out the Warthog WS-1/2 by StoneAge: http://www.stoneagetools.com/sewer-tools-nozzles/warthog-ws.html">E-mail link</a></li>
+            <li><a href="mailto:?subject=Warthog WS-1/2&body=Check out the Warthog WS-1/2 by StoneAge: http://www.stoneagetools.com/ws">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
