--- a/sewer-tools-nozzles/warthog-wt.html
+++ b/sewer-tools-nozzles/warthog-wt.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WT Sewer Nozzles by StoneAge
+excerpt: The WT-3/8-C can negotiate elbows and clean-outs commonly found in laterals in homes, buildings, restaurants and other light commercial facilities.
 permalink: /wt
 master-slider: yes
 ---
