--- a/sewer-tools-nozzles/warthog-wv.html
+++ b/sewer-tools-nozzles/warthog-wv.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Warthog WV Sewer Nozzles by StoneAge
+excerpt: The WV-1/4 cleans lines as small as 2” with long sweeping elbows with no high pressure seals or bearings to service.
 permalink: /wv
 master-slider: yes
 ---
