--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Warthog Sewer Nozzles and Hydroexcavation Tools by StoneAge
-excerpt: High quality, durable jetting nozzles for the sewer industry.
+excerpt: High quality, durable jetting and hydroexcavation nozzles for the sewer industry.
 permalink: /sewer-tools
 landing: yes
 ---
