--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge AutoBox ABX-2L Automated Flex Lancing/Exchanger Tube Cleaning
+excerpt: The AutoBox ABX-2L is an automated system for hands-free heat exchanger tube cleaning applications.
 permalink: /abx-2l
 master-slider: yes
 ---
