--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge AutoBox ABX-3L Automated Triple Flex Lancing/Exchanger Tube Cleaning
+excerpt: The AutoBox ABX-3L is an automated system for hands-free heat exchanger tube cleaning applications designed to run triple, dual, or single flex lance setups.
 permalink: /abx-3l
 master-slider: yes
 ---
