--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge AutoBox ABX-500 Hose Control for Pipe and Vessel Cleaning
+excerpt: The AutoBox ABX-500 is a hands-free hose drive for pipe and vessel cleaning.
 permalink: /abx-500
 master-slider: yes
 ---
