--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge AutoBox ABX-PRO Hose Feed for Pipe Cleaning
+excerpt: The AutoBox ABX-PRO is a hose feed tractor for small diameter pipe cleaning engineered with safety, portability and quick set-up in mind.
 permalink: /abx-pro
 master-slider: yes
 ---
