--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: AutoStroke Blockage Sensor for AutoBox Heat Exchanger Tube Cleaning
+excerpt: The AutoStroke is designed to increase efficiency of the ABX-2L in applications with plugged heat exchanger tubes.
 permalink: /autostroke
 master-slider: yes
 ---
