--- a/waterblast-automation/bfw-100-boiler-cleaner.html
+++ b/waterblast-automation/bfw-100-boiler-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge BFW-100 High Flow Boiler Cleaning
+excerpt: Designed for high flow online boiler cleaning, the BFW-100 can effectively clean any large vessel with limited entry access.
 permalink: /bfw-100
 master-slider: yes
 ---
