--- a/waterblast-automation/blackhawk-concrete-demo.html
+++ b/waterblast-automation/blackhawk-concrete-demo.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Blackhawk BHK-100 Concrete Hydro-demolition
+excerpt: The Blackhawk BHK-100 is a cost-effective, safe alternative to traditional methods of removing and scarifying concrete.
 permalink: /blackhawk
 master-slider: yes
 ---
@@ -87,43 +88,36 @@ master-slider: yes
       <section id="section-bar-1">
         <div class="col-sm-5">
           <table class="table specs table-hover">
-          <tbody>
-            <tr>
-              <th>Tool Model</th>
-              <td colspan="2">BFW-100</td>
-            </tr>
-            <tr>
-              <th>Maximum Pressure</th>
-              <td>10k psi</td>
-              <td><span class="metric">690 bar</span></td>
-            </tr>
-            <tr>
-              <th>Maximum Flow</th>
-              <td>300 gpm</td>
-              <td><span class="metric">1140 l/min</span></td>
-            </tr>
-            <tr>
-              <th>Inlet Connection</th>
-              <td colspan="2">1 NPT</td>
-            </tr>
-            <tr>
-            <tr>
-              <th>Rotation Speed</th>
-              <td colspan="2">10-50 rpm</td>
-            </tr>
-            <tr>
-            <tr>
-              <th>Linear Speed</th>
-              <td>8–35 ft/min</td>
-              <td><span class="metric">2.4–11 m/min</span></td>
-            </tr>
-            <tr>
-              <th>Stroke Length</th>
-              <td>13 ft</td>
-              <td><span class="metric">4.0 m</span></td>
-            </tr>
-          </tbody>
-          </table>
+              <tbody>
+                <tr>
+                  <th>Tool Model</th>
+                  <td colspan="2">Blackhawk BHK-100</td>
+                </tr>
+                <tr>
+                  <th>Maximum Pressure</th>
+                  <td>22k psi</td>
+                  <td><span class="metric">1500 bar</span></td>
+                </tr>
+                <tr>
+                  <th>Maximum Flow</th>
+                  <td>50 gpm</td>
+                  <td><span class="metric">190 l/min</span></td>
+                </tr>
+                <tr>
+                  <th>Inlet Connection</th>
+                  <td colspan="2">3/4 MP</td>
+                </tr>
+                <tr>
+                  <th>Weight</th>
+                  <td>1220 lbs</td>
+                  <td><span class="metric">544 kg</span></td>
+                </tr>
+                <tr>
+                  <th>Machine Attachment</th>
+                  <td colspan="2">Universal Skid Steer Plate</td>
+                </tr>
+              </tbody>
+              </table>
         </div>
 <!--
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
