--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Bundle Blaster Shell Side Exchanger Cleaning
+excerpt: The Bundle Blaster is a powerful and affordable automated solution for external or “shell side” cleaning of heat exchangers and tube bundles.
 permalink: /bundle-blaster
 master-slider: yes
 ---
