--- a/waterblast-automation/cable-swivel-tool.html
+++ b/waterblast-automation/cable-swivel-tool.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge CST-Air Cable-Guided Boiler Cleaning
+excerpt: The patented, hollow-shaft Cable Swivel Tool CST-Air slides on a stretched cable for powerful cleaning in difficult to reach locations.
 permalink: /cst-air
 master-slider: yes
 ---
