--- a/waterblast-automation/floor-cleaner.html
+++ b/waterblast-automation/floor-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge High Pressure Floor Cleaner
+excerpt: The FCSV, FCSG self-rotary walk-behind surface cleaners are powerful enough to scarify concrete.
 permalink: /floor-cleaner
 master-slider: yes
 ---
