--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: Hose Containment for AutoBox Automated Flex Lancing Systems
+excerpt: The HCS-2L Hose Containment System is a lightweight accessory for the AutoBox ABX-2L that contains and securely stores hoses typically used for heat exchanger tube cleaning.
 permalink: /hose-containment
 master-slider: yes
 ---
