--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Automated Inside Diameter Pipe Cleaner
+excerpt: The Inside Diameter Pipe Cleaner is an automated rigid lance system designed to clean the interior surface of drill pipes.
 permalink: /id-pipe-cleaner
 master-slider: yes
 ---
