--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 page-type: product
-title: Lightweight Positioner for AutoBox ABX-2L Automated Flex Lancing System
+title: Lightweight Positioner for AutoBox Automated Flex Lancing Systems
+excerpt: The Lightweight Positioner provides controlled, efficient indexing for AutoBox automated exchanger tube cleaning.
 permalink: /lightweight-positioner
 master-slider: yes
 ---
@@ -56,7 +57,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Lightweight Positioner is used in conjunction with the AutoBox ABX-2L for controlled, efficient, and safe cleaning of heat exchanger tube IDs. It is specifically designed to be modular, lightweight, easy to setup, and expandable to allow for cleaning of different sized heat exchangers.</p>
+      <p class="product-description">The Lightweight Positioner is used in conjunction with AutoBox automated flex lancing systems for controlled, efficient, and safe cleaning of heat exchanger tube IDs. It is specifically designed to be modular, lightweight, easy to setup, and expandable to allow for cleaning of different sized heat exchangers.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
