--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Navigator Small Process Pipe Cleaning
+excerpt: The Navigator is specialized for cleaning small diameter conduit with multiple bends.
 permalink: /navigator
 master-slider: yes
 ---
