--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Automated Outside Diameter Pipe Cleaner
+excerpt: The OD Pipe Cleaner is a powerful and affordable automated solution for cleaning the outer surface of drill pipes used in the oil and gas industry.
 permalink: /od-pipe-cleaner
 master-slider: yes
 ---
