--- a/waterblast-automation/powered-rotation-units.html
+++ b/waterblast-automation/powered-rotation-units.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Powered Rotational Surface Cleaning Heads
+excerpt: Powered Rotational Heads control head rotation for diverse surface cleaning applications.
 permalink: /powered-cleaning-heads
 master-slider: yes
 ---
