--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Rigid Lance Machine for Exchanger Tube Cleaning
+excerpt: Rigid Lance Machines are the industry standard for both horizontal and vertical rigid lance cleaning of heat exchangers.
 permalink: /rigid-lance-machine
 master-slider: yes
 ---
