--- a/waterblast-automation/self-rotary-heads.html
+++ b/waterblast-automation/self-rotary-heads.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Self-Rotary Surface Cleaning Heads
+excerpt: SG-30 Free Spinner tools provide cost-effective and simple self-rotating surface cleaning and preparation solutions.
 permalink: /self-rotary-cleaning-heads
 master-slider: yes
 ---
