--- a/waterblast-automation/sm-air-large-tank-cleaner.html
+++ b/waterblast-automation/sm-air-large-tank-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge SM-Air High Flow Large Tank Cleaning
+excerpt: The SM-AIR large tank cleaner offers air powered rotation at high flows for effective jet power over long distances.
 permalink: /sm-air
 master-slider: yes
 ---
