--- a/waterblast-automation/striker-remote-shotgunning.html
+++ b/waterblast-automation/striker-remote-shotgunning.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Striker Remote High Pressure Hydroblast Shotgunning
+excerpt: The Striker is an automated system designed for hands free shotgunning applications with an emphasis on safety, usability, and easy assembly.
 permalink: /striker
 master-slider: yes
 ---
