--- a/waterblast-automation/torus-positioning-booms.html
+++ b/waterblast-automation/torus-positioning-booms.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Positioning Booms for Torus Tank and Vessel Cleaning Tools
+excerpt: Positioners provide up to 19 ft (5.8 m) of reach for the Torus 3-D tank cleaner and keep the operator out of the tank.
 permalink: /torus-booms
 master-slider: yes
 ---
