--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Torus TR-130 3D Tank and Vessel Cleaning
+excerpt: The Torus TR-130 is a powerful and highly adaptable 3-D cleaning tool designed to easily adjust to a wide range of pump capacities, working pressures, and cleaning applications.
 permalink: /tr-130
 master-slider: yes
 ---
