--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Torus TR-200 3D Tank and Vessel Cleaning
+excerpt: The Torus TR-200 is the industry’s most powerful 3-D tool, capable of delivering flows up to 220 gpm (830 l/min) with minimal pressure loss.
 permalink: /tr-200
 master-slider: yes
 ---
