--- a/waterblast-automation/yellow-jacket-boiler-cleaner.html
+++ b/waterblast-automation/yellow-jacket-boiler-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Yellow Jacket Online Boiler Cleaning
+excerpt: The Yellow Jacket is an automated high flow water lancing system specifically designed for online boiler cleaning.
 permalink: /yellow-jacket
 master-slider: yes
 ---
