--- a/rotary-waterblast-tools/sl-swivel.html
+++ b/rotary-waterblast-tools/sl-swivel.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge SL Swivel - Rotary Couplings for High Pressure Industrial Cleaning
+excerpt: The SL Swivel was designed to be a versatile, compact union for use in conveying high pressure fluid from a stationary line to a rotating or twisting assembly.
 permalink: /sl-swivel
 master-slider: yes
 ---
