--- a/waterblast-automation/boiler-tube-cleaner.html
+++ b/waterblast-automation/boiler-tube-cleaner.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge Boiler Tube Cleaner for Process and Package Boilers
+excerpt: The BTC-100 Boiler Tube Cleaning system is engineered to automate the cleaning of radial tubes found in the mud drums of package boilers.
 permalink: /boiler-tube-cleaner
 master-slider: yes
 ---
