finish search file!

--- a/careers.html
+++ b/careers.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 page-type: page
-title: Jobs at StoneAge Waterblast Tools - Work with us! 
+title: Jobs at StoneAge Waterblast Tools - Work with us!
+excerpt: Explore career and interniship options with the StoneAge Human Resources (HR) portal.
 permalink: /jobs
 ---
 
