--- a/custom-waterblast-solutions.html
+++ b/custom-waterblast-solutions.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: page
 title: Custom Engineered Waterblast Equipment Solutions 
+excerpt: Custom engineered waterblasting solutions for your most challening jobs.
 permalink: /custom-solutions
 ---
 
