--- a/downhole-tools/spincat-sc-212.html
+++ b/downhole-tools/spincat-sc-212.html
@@ -2,6 +2,7 @@
 layout: default
 page-type: product
 title: StoneAge SpinCat SC-212 Downhole Tools
+excerpt: The Spincat SC-212 can be used at operating pressures of 1000 to 5000 psi and flow rates of 0.8 to 2 bpm (32 to 80 gpm).
 permalink: /sc-212
 master-slider: yes
 ---
@@ -18,14 +19,13 @@ master-slider: yes
 </div>
 <!-- End Breadcrumbs -->
 
-<!-- Product Main -->
+<!-- Product Intro -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
     <div class="col-md-6 margin-bottom-30">
-      <img src="../assets/img/product/sc-212-02.jpg" alt="Spincat downhole wash tools for oil and gas industry">
+      <img src="/assets/img/product/sc-212-02.jpg" class="img-responsive" alt="Spincat downhole wash tools for oil and gas industry">
     </div>
 
-    <!-- Product Info -->
     <div class="col-md-6 padding-left-60">
       <div class="product-heading">
         <h1>SpinCat SC-212</h1>
@@ -37,20 +37,32 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-
+      
       <p class="product-description">The Spincat SC-212 can be used at operating pressures of 1000 to 5000 psi and flow rates of 0.8 to 2 bpm (32 to 80 gpm). It has a 1 1/2″ AMMT inlet thread.</p>
 
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Specifications <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+
+  </div>
+
+  </div>
+</main>
+<!-- End Product Intro -->
+
+<!-- Product tabs -->
+  <section>
+    <div class="tabs tabs-style-bar">
+        <nav>
+            <ul>
+              <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+              <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+              <li><a href="#section-bar-3"><span>Videos</span></a></li>
+            </ul>
+        </nav>
+        <div class="content-wrap">
+          
+          <!-- Specs -->
+          <section id="section-bar-1">
+            <div class="col-sm-6">
               <table class="table specs table-hover">
               <tbody>
                 <tr>
@@ -121,65 +133,55 @@ master-slider: yes
               </tbody>
               </table>
             </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingThree">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Videos <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-            <div class="panel-body">
-              <div class="row">
-                <div class="col-sm-6">
-                  <!-- Lightbox call -->
-                  <div>
-                    <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sc-212-vid">
-                      <img src="/assets/vid/thumb/sc-212-vid.png" alt="SpinCat SC-212 Maintenance video" class="img-responsive" />
-                    </a>
-                  </div>
-                  <!-- End Lightbox call -->
-                  <p class="caption">SpinCat SC-212 Maintenance</p>
+            <aside class="col-sm-3 col-sm-offset-3 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
+
+          <!-- Manuals/Docs -->
+          <section id="section-bar-2">
+            <div class="col-sm-4">
+              <ul class="list-unstyled basic">
+                <h3>Manuals</h3>
+                <li><a href="/assets/pdf/manuals/SC-212_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-212 Manual</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-4">
+              <ul class="list-unstyled basic">
+                <h3>Documentation</h3>
+                <li><a href="/assets/pdf/data-sheets/spincat_family_datasheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
+                <li><a href="http://jetting.stoneagetools.com/tool/spincat-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
+              </ul>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
+
+          <!-- Videos -->
+          <section id="section-bar-3">
+            <div class="row row-centered">
+              <div class="col-sm-4 col-centered">
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sc-212-vid">
+                    <img src="/assets/vid/thumb/sc-212-vid.png" alt="SpinCat SC-212 Maintenance video" class="img-responsive" />
+                  </a>
                 </div>
+                <!-- End Lightbox call -->
+                <p class="caption">SpinCat SC-212 Maintenance</p>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingFour">
-            <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Support <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-              </a>
-            </h4>
-          </div>
-          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-            <div class="panel-body">
-              <ul>
-                <li><a href="../assets/pdf/spincat_family_datasheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
-                <li><a href="../assets/pdf/manuals/SC-212_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-212 Tool Manual</a></li>
-                <li><a href="http://jetting.stoneagetools.com/tool/spincat-jetting-app.html" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Tool Jetting</a></li>
-              </ul>
-              <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
-              <p class="slab">Oil, Gas &amp; Renewables: <strong>Alan Charles</strong><br>
-                    Phone: <strong>+1 (720) 219-0777</strong><br>
-                    Email: <strong><a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></strong></p>
-<!--                <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>-->
-            </div>
-          </div>
-        </div><!-- end tab -->
-      </div><!-- end accordion -->
+          </section>
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
-    </div>
-  </div>
-  <!-- End Product Info -->
-
-</main>
-<!-- End Product Main -->
+        </div><!-- /content -->
+    </div><!-- /tabs -->
+</section>
+<!-- End Product tabs -->
 
 <!-- Related Items -->
 <section class="related container padding-tb-30">
@@ -188,33 +190,33 @@ master-slider: yes
   </div>
   <div class="row row-centered padding-tb-30">
     <div class="col-sm-2 col-centered">
-      <a href="/sc-168"><img class="img-responsive" src="../assets/img/product/sc_168_01.png" alt="SpinCat SC-168 downhole wash tools">
+      <a href="/sc-168"><img class="img-responsive" src="/assets/img/product/sc_168_01.png" alt="SpinCat SC-168 downhole wash tools">
       <h5>SpinCat SC-168</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/sc-250"><img class="img-responsive" src="../assets/img/product/sc_250_01.png" alt="SpinCat SC-250 downhole wash tools">
+      <a href="/sc-250"><img class="img-responsive" src="/assets/img/product/sc_250_01.png" alt="SpinCat SC-250 downhole wash tools">
       <h5>SpinCat SC-250</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/sc-287"><img class="img-responsive" src="../assets/img/product/sc_287_01.png" alt="SpinCat SC-287 downhole wash tools">
+      <a href="/sc-287"><img class="img-responsive" src="/assets/img/product/sc_287_01.png" alt="SpinCat SC-287 downhole wash tools">
       <h5>SpinCat SC-287</h5></a>
     </div>
   </div>
 </section>
 <!-- End Related Items -->
 
+
 <!-- Product extras -->
 <section class="product-extra fluid-container bg-lt-grey">
   <div class="container padding-tb-30">
     <div class="col-md-7">
-
-        <h2>Designed to remove Plugs, Scale, and Failed Linings</h2>
-        <p>Deliver powerful cleaning force where needed and quickly restore production without causing damage to difficult to access pipe.</p>
+      <h2>Designed to remove Plugs, Scale, and Failed Linings</h2>
+      <p>Deliver powerful cleaning force where needed and quickly restore production without causing damage to difficult to access pipe.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/spincat_family_datasheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/spincat_family_datasheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -236,22 +238,22 @@ master-slider: yes
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>SpinCat has become a standard term for an SWT.</p>
           <p class="signed">-Alan Charles,<br/>StoneAge</p>
         </div>
-        <img src="../assets/img/sliders/spincat_underground_01.jpg" alt="SpinCat wash tools for downhole coil tubing">
+        <img src="/assets/img/sliders/spincat_underground_01.jpg" alt="SpinCat wash tools for downhole coil tubing">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/spincat-water-01.jpg" alt="SpinCat wash tools for downhole coil tubing">
+        <img src="/assets/img/sliders/spincat-water-01.jpg" alt="SpinCat wash tools for downhole coil tubing">
       </div>
 
     </div><!-- End wrapper -->
@@ -267,6 +269,7 @@ master-slider: yes
     </a>
   </div>
 </div>
-<!--=== End Product Testimonials ===-->
+<!-- End Product Testimonials -->
+
 
 {% include footer-cta.html %}
