misc manual udates

--- a/index.html
+++ b/index.html
@@ -72,79 +72,18 @@ permalink: /
 <!-- Features -->    
 <section class="home-features bg-lt-grey">
   <div class="container padding-tb-30">
-    <!-- Featured Products -->
+    <!-- Features/Promos -->
     <div class="col-md-9 padding-right-60">
       <div class="section-heading">
-        <h2>Featured Products</h2>
+        <h2>Features &amp; Promotions</h2>
       </div>
       <!-- Row 1 -->
       <div class="row margin-bottom-20">
-        <div class="col-md-4 col-sm-4 padding-right-30">
-          <div class="product-thumbnails">
-            <img class="img-thumbnail" src="assets/img/thumb/striker_02.jpg" alt="">
-            <a class="btn" href="/striker">read more +</a>
-            <div class="caption">
-              <h4><a href="/striker">Striker</a></h4>
-              <p>Wireless tracked remote shotgunning system</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-4 padding-right-30">
-          <div class="product-thumbnails">
-            <img class="img-thumbnail" src="assets/img/thumb/switcher_feature_thumb.png" alt="Warthog WGR Switcher">
-            <a class="btn" href="/switcher">read more +</a>
-            <div class="caption">
-              <h4><a href="/switcher">Warthog WGR Switcher</a></h4>
-              <p>Pull, clean and flush without changing nozzles</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-4 padding-right-30">
-          <div class="product-thumbnails">
-            <img class="img-thumbnail" src="assets/img/thumb/navigator-thumb.jpg" alt="Navigator RHD for pipr cleaning">
-            <a class="btn" href="/navigator">read more +</a>
-            <div class="caption">
-              <h4><a href="/navigator">Navigator</a></h4>
-              <p>Rotary cleaning for small process conduit with multiple bends</p>
-            </div>
-          </div>
-        </div>
+        <img src="/assets/img/features/wwett17_show_special.png" alt="2017 WWETT Show Special" class="img-responsive"/>
       </div><!-- End Row 1 -->
-
-      <!-- Row 2 -->
-      <div class="row margin-bottom-20">
-        <div class="col-md-4 col-sm-4 padding-right-30">
-          <div class="product-thumbnails">
-            <img class="img-thumbnail" src="assets/img/thumb/prodrive-thumb.jpg" alt="ProDrive high pressure hose feed">
-            <a class="btn" href="/prodrive">read more +</a>
-            <div class="caption">
-              <h4><a href="/prodrive">AutoBox ProDrive</a></h4>
-              <p>Ultra-portable automated hose feed for pipe cleaning</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-4 padding-right-30">
-          <div class="product-thumbnails">
-            <img class="img-thumbnail" src="assets/img/thumb/abx-2l.jpg" alt="AutoBox ABX-2L">
-            <a class="btn" href="/abx-2l">read more +</a>
-            <div class="caption">
-              <h4><a href="/abx-2l">AutoBox ABX-2L</a></h4>
-              <p>Automated flex-lancing of heat exchanger tubes</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-4 padding-right-30">
-          <div class="product-thumbnails">
-            <img class="img-thumbnail" src="assets/img/thumb/abx-500.jpg" alt="AutoBox ABX-500">
-            <a class="btn" href="/abx-500">read more +</a>
-            <div class="caption">
-              <h4><a href="/abx-500">AutoBox ABX-500</a></h4>
-              <p>Hands-free hose handling for high pressure pipe cleaning</p>
-            </div>
-          </div>
-        </div>
-      </div><!-- End Row 2 -->
-    </div><!-- End Featured Products -->
+      
+      
+    </div><!-- End Features/Promos -->
 
     <!-- White Papers -->
     <div class="col-md-2 col-sm-4 col-md-offset-1">
