--- a/manuals.html
+++ b/manuals.html
@@ -186,6 +186,14 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
+                <td><a href="/beetle">BT12, BT18, BT25</a></td>
+                <td>BEETLE<br>Rotary pipe and tube cleaning nozzle </td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BT_manual.pdf" target="_blank" class="btn btn-sm">PL 601</a></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
                 <td><a href="/bfw-100">BFW-100</a></td>
                 <td>BIG FLOW WATERBLASTER<br>High flow waterblast lancing tool</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BFW_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
@@ -255,14 +263,6 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/manuals/BRLM_500_Manual.pdf" target="_blank" class="btn btn-sm">PL 548</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/beetle">BT12, BT18, BT25</a></td>
-                <td>BEETLE<br>Rotary nozzle for pipe and tube cleaning</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BT_manual.pdf" target="_blank" class="btn btn-sm">PL 601</a></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -634,7 +634,7 @@ permalink: /manuals
                 <td>SA 1940</td>
                 <td>Air Powered Rotary Hand Lancing Tool</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SA-1940_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_SA-USA.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>SL-H9H9</td>
