--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -31,7 +31,6 @@ landing: yes
       <button class="filter" data-filter=".md">Medium Lines</button>
       <button class="filter" data-filter=".sm">Small Lines</button>
       <button class="filter" data-filter=".hydro-x">Hydro-Excavation</button>
-      <button class="filter" data-filter=".heads">Head Options</button>
       <button class="filter" data-filter=".accessories">Accessories</button>
       <a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search_lg.png" alt="Search" style="width:20px; margin-left:15px;" /></a>
       
@@ -297,10 +296,10 @@ landing: yes
           </a>
         </div>
         
-        <div class="mix accessories heads" data-name="manhole">
+        <div class="mix accessories" data-name="manhole">
           <a href="/manhole-cleaner" class="search-text">
             <img src="/assets/img/product/manhole-cleaner-02.jpg" class="img-responsive" />
-            <h3>Manhole Cleaner</h3>
+            <h3>Manhole Cleaners</h3>
             <h5>Safe and effective</h5>
             <table class="table">
               <tbody>
